Final update: fixed structure, added tests, removed API key